app/assets/stylesheets/global.scss
$beige: #FFF9EF;
$black: #000000;
$white: #FFFFFF;
$pink: #F98DE2;
$green: #ADEA07;
$purple: #9067F3;
$blue: #4431FE;
$yellow: #FECE00;
$red: #FF7664;
$gray: #8E8E8E;


/* global styles */
html,    
    body {
    scroll-behavior: smooth;
    background-color: #ffffff;
    -webkit-text-size-adjust: 100%;
    text-size-adjust: 100%;
    color: #000;
}

.nicolada__wrapper {
    h1, h2, h3, h4, h5 {
        font-family: "Bricolage Grotesque", serif;
        font-weight: 600;
        color: $black;
    }

    h3 {
        font-size: 32px;
        margin-bottom: 32px;
    }

    p {
        font-family: "DM Sans", sans-serif;
        font-weight: 400;
    }
    a {
        text-decoration: none;
        color: $black;
    }
    .material-symbols-outlined {
        font-variation-settings:
        'FILL' 0,
        'wght' 500,
        'GRAD' 0,
        'opsz' 24
      }
      .btn__wrapper {
        text-align: center;
        .btn {
            font-family: "DM Sans", sans-serif;
            text-decoration: none;
            font-weight: 600;
            display: inline-block;
            color: $white;
            background-color: $black;
            border: 3px solid $black;
            padding: 6px 28px;
            border-radius: 24px;
            transition: 0.1s ease-in;
            margin: 0 auto;
            margin-top: 30px;
            &:hover {
                background-color: $white;
                border: 3px solid $black;
                color: $black;
            }
            &:active {
                transform: scale(0.92);
            }
        }
        
    }
}

/* header */

header {
    overflow: hidden;
    padding: 20px;
    background-color: $beige;
    @media (max-width: 1023px) {
        padding: 0px;
    }
    .navbar {
        background-color: $beige;
        max-width: 1344px;
        margin: 0 auto;
        .navbar-burger {
            color: #000000;
            &:hover {
                background-color: darken($color: $beige, $amount: 5);
            }
        }
        .navbar-brand {
            align-items: center;
            svg {
                color: #000000;
                max-width: 140px;
                width: 100%;
            }
            @media (max-width: 1023px) {
                padding: 20px 20px 20px 40px;
            }
        }
        .navbar-menu {
            @media (max-width: 1023px) {
                background-color: darken($color: $beige, $amount: 5);
                box-shadow: none;
                padding: 0px;
                display: block;
                max-height: 0;
                overflow: hidden;
                transition: max-height 0.5s ease-out;
            }
            &.is-active {
                border-bottom: 3px solid $black;
                max-height: 400px;
                transition: max-height 0.5s ease-in;
                .btn {
                    &:hover {
                        background-color: darken($color: $beige, $amount: 5)
                    }
                }
            }
        }
        .navbar-item {
            @media (max-width: 1023px) {
                padding: 20px 0px 20px 40px;
            }
        }
        .navbar-start {
            align-items: center;
            flex: auto;
            margin: 0;
            justify-content: center;
            @media (max-width: 1023px) {
                justify-content: flex-start;
            }
            .header__link {
                font-family: "Inter", sans-serif;
                text-decoration: none;
                color: $black !important;
                font-weight: 600;
                display: block;
                position: relative;
                text-align: center;
                margin: 0px 16px;
                @media (max-width: 1023px) {
                    margin: 0px;
                }
                &:after {
                    content: '';
                    position: absolute;
                    width: 100%;
                    transform: scaleX(0);
                    border-radius: 5px;
                    height: 0.15em;
                    bottom: 0;
                    left: 0;
                    background: currentcolor;
                    transform-origin: bottom right;
                    transition: transform 0.5s ease-out;
                }
                &:hover {
                    background-color: $beige;
                    &:after {
                        transform: scaleX(1);
                        transform-origin: bottom left;
                    }
                    @media (max-width: 1023px) {
                        &:after {
                            transform: scaleX(0);
                        }
                    }
                }
                @media (max-width: 1023px) {
                    text-align: left;
                }
            }
        }
    }
    .btn__wrapper {
        text-align: right;
        .btn {
            font-family: "Inter", sans-serif;
            text-decoration: none;
            font-weight: 600;
            display: block;
            position: relative;
            color: $beige;
            background-color: $black;
            border: 3px solid $black;
            padding: 6px 28px;
            border-radius: 24px;
            display: inline-block;
            transition: 0.2s ease-in;
            cursor: pointer;
            &:hover {
                background-color: $beige;
                border: 3px solid $black;
                color: $black;
                cursor: pointer;
            }
            &:active {
                transform: scale(0.92);
            }
        }
        @media (max-width: 1023px) {
            text-align: left;
        }
    }
}
/* ... */

